--- a/src/components/post-list/post-list.css
+++ b/src/components/post-list/post-list.css
@@ -3,5 +3,7 @@
 }
 .app-list .list-group-item {
   padding: 20px 35px 10px 35px;
-  margin-top: 10px;
+}
+.list-group-item {
+  border-top: 1px solid rgba(0,0,0,.125);
 }
